#16189 closed bug (fixed)
Some Japanese text missing in Webpositive
Reported by: | mt | Owned by: | pulkomandy |
---|---|---|---|
Priority: | blocker | Milestone: | R1/beta2 |
Component: | Servers/app_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Since hrev54241, some Japanese text is missing in Webpositive.
To reproduce:
- Set Japanese fonts in Apparence.
- Set Japanese fonts in Webpositive settings.
- Open Japanese version of "Welcome to haiku" (or Quick tour, userguide) in Webpositive.
Attachments (4)
Change History (20)
by , 4 years ago
Attachment: | hrev54240.png added |
---|
by , 4 years ago
Attachment: | hrev54241.png added |
---|
Webpositive opening Japanese version of "Welcome to Haiku!" in hrev54241
follow-up: 2 comment:1 by , 4 years ago
Milestone: | Unscheduled → R1/beta2 |
---|---|
Owner: | changed from | to
Priority: | normal → blocker |
Status: | new → assigned |
It looks like this makes Haiku unusable in Japanese, yes? Upgrading to Blocker status. Thanks for reporting this mt, we were going to cut off beta2 later today, but now we should probably wait until this is fixed :)
comment:2 by , 4 years ago
Replying to waddlesplash:
It looks like this makes Haiku unusable in Japanese, yes? Upgrading to Blocker status. Thanks for reporting this mt, we were going to cut off beta2 later today, but now we should probably wait until this is fixed :)
Hi, Otter Browser can display these pages correctly. So I think we can use Haiku with Japanese.
follow-up: 4 comment:3 by , 4 years ago
Otter Browser uses Qt and FreeType directly to render text, not app_server as WebPositive uses. See if StyledEdit will render those characters; likely it won't.
comment:4 by , 4 years ago
Replying to waddlesplash:
Otter Browser uses Qt and FreeType directly to render text, not app_server as WebPositive uses. See if StyledEdit will render those characters; likely it won't.
It seems StyledEdit can display welcome_jp.html correctly.
by , 4 years ago
Attachment: | hrev54241-StyledEdit.png added |
---|
StyledEdit opening welcome_jp.html in hrev54241.
comment:5 by , 4 years ago
Picture dump of Haiku へようこそ!
part:
PUSH_STATE SET_DRAWING_MODE mode: B_OP_OVER ENTER_FONT_STATE { SET_FONT_FAMILY family: "Noto Sans" SET_FONT_STYLE style: "Regular" SET_FONT_SIZE size: 12.6 SET_FONT_SHEAR shear: 90 SET_FONT_ROTATE rotation: 0 SET_FONT_SPACING SET_FONT_ENCODING SET_FONT_FACE SET_FONT_FLAGS } DRAW_STRING_LOCATIONS pointList: { (703, 191) (712, 191) (719, 191) (722, 191) (728, 191) (735, 191) (738, 191) (750, 191) } string: "Haiku へよ" POP_STATE PUSH_STATE SET_DRAWING_MODE mode: B_OP_OVER SET_FORE_COLOR color: 0xff013cdc ENTER_FONT_STATE { SET_FONT_FAMILY family: "Noto Sans CJK JP" SET_FONT_STYLE style: "Regular" SET_FONT_SIZE size: 12.6 SET_FONT_SHEAR shear: 90 SET_FONT_ROTATE rotation: 0 SET_FONT_SPACING SET_FONT_ENCODING SET_FONT_FACE SET_FONT_FLAGS } DRAW_STRING_LOCATIONS pointList: { (762, 191) } string: "う" POP_STATE PUSH_STATE SET_DRAWING_MODE mode: B_OP_OVER SET_FORE_COLOR color: 0xff013cdc ENTER_FONT_STATE { SET_FONT_FAMILY family: "Noto Sans" SET_FONT_STYLE style: "Regular" SET_FONT_SIZE size: 12.6 SET_FONT_SHEAR shear: 90 SET_FONT_ROTATE rotation: 0 SET_FONT_SPACING SET_FONT_ENCODING SET_FONT_FACE SET_FONT_FLAGS } DRAW_STRING_LOCATIONS pointList: { (774, 191) (786, 191) (798, 191) } string: "こそ!" POP_STATE
Splitting looks strange.
comment:6 by , 4 years ago
Why did the character in the middle get "CJK JP" selected, but the others did not? That looks extremely strange.
PictureDump looks like a very useful tool, though!
comment:7 by , 4 years ago
I think this commit broke it - it might be a problem with the fallback fonts array and the loop function.
comment:9 by , 4 years ago
The most likely culprit is one of the two parent commits which change how fallback glyphs are looked up. However on first glance I don't see any immediate problem.
follow-up: 11 comment:10 by , 4 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev54299.
comment:11 by , 4 years ago
Replying to waddlesplash:
Fixed in hrev54299.
Thanks for patch, but in hrev54299, text is ok, but the style seems still strange.
by , 4 years ago
Attachment: | hrev54299.png added |
---|
Webpositive opening Japanese version of "Welcome to Haiku!" in hrev54299.
comment:12 by , 4 years ago
Yes, I saw this too. Please open a new ticket about it, I'm not sure if it's yet another app_server bug, or actually a bug in HaikuWebKit.
comment:13 by , 4 years ago
It could just be missing glyphs in the Noto font or something like that too. We should probably update the fonts before going further with this?
comment:14 by , 4 years ago
I don't think so. The first screenshot clearly shows the characters in bold-face. Now they are still shown, but no longer in bold-face. So somehow they used to be found inside the "CJK JP Bold" font, but, now they aren't.
comment:15 by , 4 years ago
It could just be missing glyphs in the Noto font or something like that too. We should probably update the fonts before going further with this?
No they aren't missing, WebPositive requests some segments with Noto Sans and some with Noto Sans CJK JP for that section, for some reason the text splitting changes when you zoom in and out in webpositive so sometimes the I glyph and the ! glyph are bold and sometimes they arent, anyway that would the "most" webpositive might be doing wrong (requesting with noto sans while config sais noto sans cjk jp)
Noto Sans bold Fallback is still broken, that hrev did not fix that, instead it now falls back to regular style, which isn't perfect, but better than falling back to nothing as it did before.
comment:16 by , 4 years ago
I add new ticket #16212 (Some Japanese text style missing in Webpositive).
Webpositive opening Japanese version of "Welcome to Haiku!" in hrev54240