app_server: Fall back into non-matching font variants if necessary.

7a8d5a2db3214be378c4450bd94e07db75d5e240 introduced that the fallback tries to match the style
instead of using regular, the fallback was broken in a different way until commit
4dcd8c81b12790b0ad7661f3ab8742ae619996be fixed the remaining issue, this commit
makes the fallback first try the matching style and afterwards try the regular
style (so as to improve above falling back to regular in every case).

Fixes #16189.

Change-Id: Iee956c4c1461794b4836c94e09d66d8cbf196678
Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>
Style fixes and use of BAutolock by me. Also changed the style fallback
to use style 0 instead of "Regular".
(cherry picked from commit 3c6422ea0fd90e002ae9f78b1ca3e67766cb3551)
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2877